# minara-connect

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PROTOCOL.md  README.md  SECURITY.md  TODOS.md  UBIQUITOUS_LANGUAGE.md  install.sh
.claude/skills/cc-connect-chat/: SKILL.md
.claude/skills/cc-connect-room/: SKILL.md
.claude/skills/publish/: SKILL.md
.claude/skills/push/: SKILL.md
.githooks/: commit-msg  pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
chat-ui/: .gitignore  .prettierignore  README.md  package.json  tsconfig.json
chat-ui/src/: ipc.ts  log_tail.ts  main.tsx  mention.test.ts  mention.ts  ticket.ts  types.ts
chat-ui/src/components/: App.tsx  ChatScrollback.tsx  HeaderBar.tsx  InputBox.tsx  MentionPopup.tsx
crates/cc-connect/: Cargo.toml
crates/cc-connect-core/: Cargo.toml
crates/cc-connect-core/src/: claude_pid.rs  cursor_io.rs  hook_format.rs  lib.rs  log_io.rs  message.rs  posix.rs  rate_limit.rs  session_state.rs
crates/cc-connect-hook/src/: main.rs
crates/cc-connect-mcp/: Cargo.toml
crates/cc-connect-mcp/src/: main.rs
crates/cc-connect-tui/: Cargo.toml
crates/cc-connect-tui/src/: app.rs  chat_pane.rs  claude_pane.rs  event_loop.rs  lib.rs  main.rs  mention.rs  setup.rs  tabs.rs  theme.rs
crates/cc-connect/src/: accept.rs  backfill.rs  chat.rs  chat_daemon.rs  chat_session.rs  doctor.rs  host.rs  host_bg.rs  launcher_paths.rs  lib.rs  lifecycle.rs  main.rs  room.rs  setup.rs  watch.rs
crates/cc-connect/tests/: integration_magic_moment.rs
docs/: vscode-extension-design.md
docs/adr/: 0001-machine-scoped-identity.md  0002-backfill-via-custom-rpc-not-iroh-docs.md  0003-pid-based-active-rooms-discovery.md  0004-hook-budget-and-graceful-overflow.md  0005-mcp-first-architecture.md  0006-trust-boundary-claude-pid-binding.md
docs/agents/: domain-docs.md  issue-tracker.md  triage-labels.md
layouts/: auto-reply-prompt.md  cc-connect.kdl  cc-connect.tmux.sh  claude-wrap.sh
scripts/: bootstrap.sh  configure-repo.sh  install-git-hooks.sh  smoke-test-bg.sh  smoke-test-mcp.sh  smoke-test.sh
spike/: README.md  RESULTS.md  RUNBOOK.md  userpromptsubmit-spike.sh
vscode-extension/: .vscodeignore  package.json
vscode-extension/docs/: claude-ui-polish.md
vscode-extension/src/: extension.ts  types.ts
vscode-extension/src/host/: claude_runner.ts  config.ts  daemon.ts  ipc.ts  log_tail.ts  mention.ts  risk.ts
vscode-extension/src/panel/: RoomPanelProvider.ts
vscode-extension/webview/: Chat.tsx  Claude.tsx  main.tsx  mentionAutocomplete.ts  processClaude.ts  useAutosize.ts
