[workspace]
resolver = "2"
members = [
    "crates/cc-connect-core",
    "crates/cc-connect",
    "crates/cc-connect-hook",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yijian/cc-connect"
rust-version = "1.75"

[workspace.dependencies]
# stdlib companions
anyhow = "1"
# crypto
ed25519-dalek = "2"
getrandom = "0.2"
# encoding
data-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# postcard is the canonical iroh-gossip Ticket encoding (see chat.rs example).
postcard = { version = "1", features = ["alloc"] }
# ULID generation for new Messages (PROTOCOL.md §4 id field).
ulid = "1"
# bytes::Bytes is iroh-gossip's broadcast payload type.
bytes = "1"
# Stream combinators on iroh-gossip's Receiver (matches the iroh-gossip
# examples/chat.rs convention).
futures-lite = "2"
# CLI
clap = { version = "4", features = ["derive"] }
# filesystem syscalls (fcntl OFD byte-range locking, etc.)
rustix = { version = "1", features = ["fs", "process"] }
# test helpers
tempfile = "3"

# iroh stack. April 2026 the published `ed25519-3.0.0-rc.4` is broken
# against the current pkcs8 (KeyMalformed went from unit to tuple variant);
# we vendor + patch ed25519 in `vendored/ed25519/` to bypass. See the
# `[patch.crates-io]` section at the bottom of this file and TODOS.md.
iroh = "0.97"
iroh-gossip = "0.97"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "sync", "time", "signal"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# Local fix for the ed25519 / pkcs8 enum-variant break (see iroh deps note
# above). Points at our vendored copy of ed25519-3.0.0-rc.4 with three
# `Error::KeyMalformed` references swapped to the unit variant
# `Error::ParametersMalformed`. Drop this once upstream ships ed25519
# rc.5 / 3.0.0 stable that compiles against current pkcs8.
[patch.crates-io]
ed25519 = { path = "vendored/ed25519" }
ed25519-dalek = { path = "vendored/ed25519-dalek" }
