[workspace]
resolver = "2"
members = [
    "crates/cc-connect-core",
    "crates/cc-connect",
    "crates/cc-connect-hook",
    "crates/cc-connect-mcp",
    "crates/cc-connect-tui",
]

[workspace.package]
# Tracks the latest release tag (drop the `v` prefix). Bumped together
# with `git tag v...` so `cc-connect --version` reports the same number
# users downloaded. The CI release.yml derives the artifact version
# from the tag, NOT this field — keeping them in lockstep is hygiene
# for users running `cc-connect --version` and for the VSCode
# extension's binary-version compatibility check (see
# vscode-extension/src/host/binaryVersion.ts).
version = "0.6.0-rc.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Minara-AI/cc-connect"
rust-version = "1.89"

[workspace.dependencies]
# stdlib companions
anyhow = "1"
# crypto
ed25519-dalek = "2"
getrandom = "0.2"
# encoding
data-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# postcard is the canonical iroh-gossip Ticket encoding (see chat.rs example).
postcard = { version = "1", features = ["alloc"] }
# ULID generation for new Messages (PROTOCOL.md §4 id field).
ulid = "1"
# bytes::Bytes is iroh-gossip's broadcast payload type.
bytes = "1"
# Stream combinators on iroh-gossip's Receiver (matches the iroh-gossip
# examples/chat.rs convention).
futures-lite = "2"
# CLI
clap = { version = "4", features = ["derive"] }
# filesystem syscalls (fcntl OFD byte-range locking, etc.)
rustix = { version = "1", features = ["fs", "process"] }
# test helpers
tempfile = "3"

# iroh stack. The published `ed25519-3.0.0-rc.4` was broken against the
# current pkcs8 (KeyMalformed went from unit to tuple variant); we
# vendor + patch ed25519 in `vendored/ed25519/` to bypass. ed25519
# 3.0.0 (2026-05-03) + ed25519-dalek 3.0.0-pre.7 (2026-05-06) ship the
# upstream fix, but iroh 0.97 has an exact pin on
# `ed25519-dalek =3.0.0-pre.1` and iroh 0.98 only bumps it to
# `=3.0.0-pre.6`. Both still pre-fix, so the patch stays until iroh
# ships a release that pins pre.7+. See `[patch.crates-io]` and
# TODOS.md.
iroh = "0.97"
iroh-gossip = "0.97"
# iroh-blobs 0.99 requires iroh ^0.97 (0.97 wants iroh ^0.95 which conflicts).
iroh-blobs = "0.99"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "sync", "time", "signal"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# Local fix for the ed25519 / pkcs8 enum-variant break (see iroh deps note
# above). Points at our vendored copy of ed25519-3.0.0-rc.4 with three
# `Error::KeyMalformed` references swapped to the unit variant
# `Error::ParametersMalformed`. Drop this once iroh ships a release that
# pins ed25519-dalek 3.0.0-pre.7+ (the upstream fix landed there but
# the iroh stack hasn't picked it up yet).
[patch.crates-io]
ed25519 = { path = "vendored/ed25519" }
ed25519-dalek = { path = "vendored/ed25519-dalek" }
