[package]
name = "cc-connect-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "MCP (Model Context Protocol) server for cc-connect — lets Claude Code call back into its bound chat room (send / drop / @ / list_files / recent)."

[[bin]]
name = "cc-connect-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
cc-connect-core = { path = "../cc-connect-core" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-util", "io-std", "net", "process"] }
