[package]
name = "cc-connect"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "cc-connect host/chat/doctor — multi-Claude shared-substrate client."

[lib]
name = "cc_connect"
path = "src/lib.rs"

[[bin]]
name = "cc-connect"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
cc-connect-core = { path = "../cc-connect-core" }
bytes.workspace = true
futures-lite.workspace = true
getrandom.workspace = true
iroh.workspace = true
iroh-blobs.workspace = true
iroh-gossip.workspace = true
postcard.workspace = true
rustix.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
ulid.workspace = true

[dev-dependencies]
tempfile.workspace = true
